2007-08-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/installation.doc, doc/local/linking.doc: Documentation
	updated to reflect recent changes

	* win32/itpp_acml_tests/fastica_test.vcproj,
	win32/itpp_acml_tests/itfile_test.vcproj,
	win32/itpp_acml_tests/parser_test.vcproj,
	win32/itpp_mkl_tests/*.vcproj: Final problems fixed in the MSVC++
	project files for test programs

	The fastica_test, itfile_test and parser_test projects require
	additional preprocessor definitions of some test data files.
	Besides, all project files in win32/itpp_mkl_tests directory were
	missing ProjectGUID, which is normally automatically added by the
	MSVC++ IDE environment. All test programs should now compile and
	run without any problems.

2007-08-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* extras/acml_tests_vcproj.template,
	extras/mkl_tests_vcproj.template, win32/**/*.vcproj: Removed
	versions from MKL and ACML directories

	To prevent unnecessary updates of MSVC++ project files, the
	installation directories of MKL and ACML libraries under windows
	do not contain version numbers, i.e. "C:\Program Files\Intel\MKL"
	and "C:\Program Files\AMD\acml". MKL and ACML libraries should be
	installed into these directories in order to work with the
	prepared project files without any modifications.

	* itpp/base/mat.cpp, itpp/base/mat.h, itpp/base/vec.cpp,
	itpp/base/vec.h: Fixed problems with comma in Vec::set() parser

	The previous string parser implementation in Vec class was not
	fully functional when using MSVC++ compiler. The problem was that
	commas just after a parsed value caused application crash. For
	instance "1 , 0 1 " was parsed fine, but parsing "1, 0,1" resulted
	in a crash. Fixed this issue by replacing all commas with spaces
	before actual parsing is done, except the complex vector case,
	where "(1,0.2)" are valid complex values. BTW, the Mat::set()
	parsing function was rewritten to reuse the Vec::set() method.
